src/test/ui/parser/keyword-else-as-identifier.stderr
error: expected identifier, found keyword `else`
  --> $DIR/keyword-else-as-identifier.rs:4:9
   |
LL |     let else = "foo";
   |         ^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#else = "foo";
   |         ^^^^^^

error: aborting due to previous error

